5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1679_1105.log
== TEST (2019-04-25 10:25:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira a sua cor: ").lower()
print(a)
-- OUTPUT:
lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:25:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira a sua cor: ").lower()
print("Entrada:", a)
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:27:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira a sua cor: ").lower()
print("Entrada:", a)

if (a==lobo):
	print("Casa: Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (a==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:27:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira a sua cor: ").lower()
print("Entrada:", a)

if (a=="lobo"):
	print("Casa: Stark")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:33:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao: ").lower()
print("Entrada:", a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("rosa")
elif (a=="sol"):
	print("Martell")
elif (a=="lula"):
	print("Greyjoy")
elif(a=="esfolado"):
	print("Bolton")
elif(a=="turta"):
	print("Tully")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:36:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao: ").lower()
print("Entrada:", a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:36:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao: ").lower()
print("Entrada:", a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.126434
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa:Tagaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:36:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao: ").lower()
print("Entrada:", a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:36:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao: ").lower()
print("Entrada:", a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:37:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao: ").lower()
print("Entrada:",a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.185863
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa:Tagaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:37:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao: ").lower()
print("Entrada:",a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.134805
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Insira seu brasao: Entrada: dragao
Casa:Tagaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:37:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao: ").lower()
print("Entrada:",a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:37:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao:").lower()
print("Entrada:",a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.170477
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa:Tagaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:37:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao:").lower()
print("Entrada:",a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.127704
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa:Tagaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao:").lower()
print("Entrada:",a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Insira seu brasao:").lower()
print("Entrada:",a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa:Tagaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")	
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")

else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:04:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Insira o seu brasao:").lower()
print(b)
if (b=="Lobo")
-- ERROR:
File "XXXX", line 5
    if (b=="Lobo")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:04:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Insira o seu brasao:").lower()
print(b)
if (b=="Lobo"):
-- ERROR:
File "XXXX", line 6
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:05:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Insira o seu brasao:").lower()
print(b)
	
-- OUTPUT:
lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:05:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Insira o seu brasao:").lower()
print(b)
	
-- OUTPUT:
lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:06:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Insira o seu brasao:").lower()

if(b=="lobo"):
	print("Entrada:", b)
	
-- OUTPUT:
lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:07:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Insira o seu brasao:").lower()

if(b=="lobo"):
	print("Entrada:", b)
	print("Casa: Stark")
if(b=="leao"):
	print("Entrada:", b)
	print("Casa: Lannister")
-- OUTPUT:
lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:11:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Insira o seu brasao:").lower()

if(b=="lobo"):
	print("Entrada:", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:", b)
	print("Casa: Targaryen")
elif(b=="rosa"):
	print("Entrada:", b)
	print("Casa: Tyrel")
elif(b=="sol"):
	print("Entrada:", b)
	print("Casa: Martell")
elif(b=="lula"):
	print("Entrada:", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:", b)
	print("Casa: Tully")

else:
	print("Entrada:", b)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:11:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Insira o seu brasao:").lower()

if(b=="lobo"):
	print("Entrada:", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:", b)
	print("Casa: Targaryen")
elif(b=="rosa"):
	print("Entrada:", b)
	print("Casa: Tyrel")
elif(b=="sol"):
	print("Entrada:", b)
	print("Casa: Martell")
elif(b=="lula"):
	print("Entrada:", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:", b)
	print("Casa: Tully")

else:
	print("Entrada:", b)
	print("Brasao invalido")
-- EXECUTION TIME:
0.135364
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
